# rocket-demo

./: Cargo.toml  Rocket.toml
db/: tasks.sqlite
migrations/2019-10-15-071935_create_tasks/: up.sql
src/: main.rs  task.rs
templates/: base.html.tera  login.html.tera
